@@ -1,30 +1,38 @@
 package ngo.nabarun.app.infra.serviceimpl;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 import org.apache.commons.codec.binary.Base64;
+import org.apache.commons.io.FilenameUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.stereotype.Service;
+import org.springframework.util.ObjectUtils;
 import org.springframework.web.multipart.MultipartFile;
 
+import ngo.nabarun.app.common.annotation.NoLogging;
+import ngo.nabarun.app.common.enums.ApiKeyStatus;
 import ngo.nabarun.app.common.enums.DocumentIndexType;
+import ngo.nabarun.app.common.enums.HistoryRefType;
 import ngo.nabarun.app.common.enums.TicketStatus;
 import ngo.nabarun.app.common.enums.TicketType;
 import ngo.nabarun.app.common.exception.NotFoundException;
-import ngo.nabarun.app.common.helper.GenericPropertyHelper;
+import ngo.nabarun.app.common.helper.PropertyHelper;
 import ngo.nabarun.app.common.util.CommonUtils;
 import ngo.nabarun.app.common.util.PasswordUtils;
+import ngo.nabarun.app.common.util.SecurityUtils.AuthenticatedUser;
 import ngo.nabarun.app.ext.exception.ThirdPartyException;
 import ngo.nabarun.app.ext.helpers.ObjectFilter;
 import ngo.nabarun.app.ext.helpers.ObjectFilter.Operator;
@@ -34,17 +42,27 @@ import ngo.nabarun.app.ext.service.IEmailExtService;
 import ngo.nabarun.app.ext.service.IFileStorageExtService;
 import ngo.nabarun.app.ext.service.IMessageExtService;
 import ngo.nabarun.app.ext.service.IRemoteConfigExtService;
+import ngo.nabarun.app.infra.core.entity.ApiKeyEntity;
 import ngo.nabarun.app.infra.core.entity.CustomFieldEntity;
 import ngo.nabarun.app.infra.core.entity.DBSequenceEntity;
+import ngo.nabarun.app.infra.core.entity.DashboardCountEntity;
 import ngo.nabarun.app.infra.core.entity.DocumentRefEntity;
+import ngo.nabarun.app.infra.core.entity.LogsEntity;
 import ngo.nabarun.app.infra.core.entity.TicketInfoEntity;
+import ngo.nabarun.app.infra.core.repo.ApiKeyRepository;
 import ngo.nabarun.app.infra.core.repo.CustomFieldRepository;
 import ngo.nabarun.app.infra.core.repo.DBSequenceRepository;
+import ngo.nabarun.app.infra.core.repo.DashboardCountRepository;
 import ngo.nabarun.app.infra.core.repo.DocumentRefRepository;
+import ngo.nabarun.app.infra.core.repo.LogsRepository;
 import ngo.nabarun.app.infra.core.repo.TicketRepository;
 import ngo.nabarun.app.infra.dto.DocumentDTO;
 import ngo.nabarun.app.infra.dto.EmailTemplateDTO;
 import ngo.nabarun.app.infra.dto.FieldDTO;
+import ngo.nabarun.app.infra.dto.HistoryDTO;
+import ngo.nabarun.app.infra.dto.HistoryDTO.ChangeDTO;
+import ngo.nabarun.app.infra.dto.LogsDTO;
+import ngo.nabarun.app.infra.dto.NTokenDTO;
 import ngo.nabarun.app.infra.dto.NotificationDTO;
 import ngo.nabarun.app.infra.dto.NotificationDTO.NotificationDTOFilter;
 import ngo.nabarun.app.infra.dto.TicketDTO;
@@ -52,23 +70,36 @@ import ngo.nabarun.app.infra.misc.ConfigTemplate;
 import ngo.nabarun.app.infra.misc.ConfigTemplate.KeyValuePair;
 import ngo.nabarun.app.infra.misc.InfraDTOHelper;
 import ngo.nabarun.app.infra.misc.InfraFieldHelper;
+import ngo.nabarun.app.infra.service.IApiKeyInfraService;
 import ngo.nabarun.app.infra.service.ICorrespondenceInfraService;
 import ngo.nabarun.app.infra.service.IDocumentInfraService;
 import ngo.nabarun.app.infra.service.IGlobalDataInfraService;
 import ngo.nabarun.app.infra.service.IHistoryInfraService;
-import ngo.nabarun.app.infra.service.ISequenceInfraService;
+import ngo.nabarun.app.infra.service.ILogInfraService;
+import ngo.nabarun.app.infra.service.ICountsInfraService;
 import ngo.nabarun.app.infra.service.ITicketInfraService;
+import ngo.nabarun.app.infra.dto.ApiKeyDTO;
 import ngo.nabarun.app.infra.dto.CorrespondentDTO;
 
 @Service
-public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInfraService, IDocumentInfraService,
-		IHistoryInfraService, ICorrespondenceInfraService, IGlobalDataInfraService {
+public class CommonInfraServiceImpl
+		implements ICountsInfraService, ITicketInfraService, IDocumentInfraService, IHistoryInfraService,
+		ICorrespondenceInfraService, IGlobalDataInfraService, ILogInfraService, IApiKeyInfraService {
 
 	@Autowired
 	private DBSequenceRepository dbSeqRepository;
 
 	@Autowired
+	private DashboardCountRepository dbCountRepository;
+
+	@Autowired
 	private TicketRepository ticketRepo;
+
+	@Autowired
+	private LogsRepository logsRepo;
+
+	@Autowired
+	private ApiKeyRepository apiKeyRepo;
 
 	@Autowired
 	private IFileStorageExtService fileStorageService;
@@ -83,14 +114,14 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 	private IEmailExtService emailExtService;
 
 	@Autowired
-	private GenericPropertyHelper propertyHelper;
+	private PropertyHelper propertyHelper;
 
 	@Autowired
 	private IRemoteConfigExtService remoteConfigService;
-	
+
 	@Autowired
 	private IMessageExtService messageExtService;
-	
+
 	@Autowired
 	private ICollectionExtService collectionExtService;
 
@@ -104,15 +135,20 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 
 	private static final String COLLECTION_NOTIFICATION_TOKEN = "notification_tokens";
 
+	private static final String DOMAIN_LOCATION_DATA = "DOMAIN_LOCATION_DATA";
+
+	private static final Map<HistoryRefType, String> historyCollectionMap = new HashMap<>(
+			Map.of(HistoryRefType.DONATION, "donation_change_history"));
+
 	@Override
-	public int getLastSequence(String seqName) {
+	public int getEntiryLastSequence(String seqName) {
 		DBSequenceEntity seqUpdate = dbSeqRepository.findById(seqName.toUpperCase())
 				.orElse(createEntity(seqName.toUpperCase()));
 		return seqUpdate.getSeq();
 	}
 
 	@Override
-	public int resetSequence(String seqName) {
+	public int resetEntirySequence(String seqName) {
 		DBSequenceEntity seqUpdate = dbSeqRepository.findById(seqName.toUpperCase())
 				.orElse(createEntity(seqName.toUpperCase()));
 		seqUpdate.setSeq(1);
@@ -123,7 +159,7 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 	}
 
 	@Override
-	public Date getLastResetDate(String seqName) {
+	public Date getEntiryLastResetDate(String seqName) {
 		DBSequenceEntity seqUpdate = dbSeqRepository.findById(seqName.toUpperCase()).orElse(null);
 		return seqUpdate == null ? null : seqUpdate.getLastSeqResetOn();
 	}
@@ -140,7 +176,7 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 	}
 
 	@Override
-	public int incrementSequence(String seqName) {
+	public int incrementEntirySequence(String seqName) {
 		DBSequenceEntity seqUpdate = dbSeqRepository.findById(seqName.toUpperCase())
 				.orElse(createEntity(seqName.toUpperCase()));
 		seqUpdate.setSeq(seqUpdate.getSeq() + 1);
@@ -150,7 +186,7 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 	}
 
 	@Override
-	public int decrementSequence(String seqName) {
+	public int decrementEntitySequence(String seqName) {
 		DBSequenceEntity seqUpdate = dbSeqRepository.findById(seqName.toUpperCase())
 				.orElse(createEntity(seqName.toUpperCase()));
 		seqUpdate.setSeq(seqUpdate.getSeq() - 1);
@@ -176,7 +212,7 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 		}
 		ticketInfo.setCreatedBy("Company");
 		ticketInfo.setCreatedOn(CommonUtils.getSystemDate());
-		
+
 		ticketInfo.setForUserId(ticket.getUserInfo() == null ? null : ticket.getUserInfo().getProfileId());
 		ticketInfo.setName(ticket.getUserInfo() == null ? null : ticket.getUserInfo().getName());
 		ticketInfo.setEmail(ticket.getUserInfo() == null ? null : ticket.getUserInfo().getEmail());
@@ -186,39 +222,38 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 				CommonUtils.addSecondsToDate(CommonUtils.getSystemDate(), ticket.getExpireTicketAfterSec()));
 		ticketInfo.setRefId(ticket.getRefId());
 		if (ticket.getTicketScope() != null) {
-			ticketInfo.setScope(
-					InfraFieldHelper.stringListToString(ticket.getTicketScope()));
+			ticketInfo.setScope(InfraFieldHelper.stringListToString(ticket.getTicketScope()));
 		}
-		ticketInfo.setToken(ticket.getToken() == null ? PasswordUtils.generateRandomString(128, true):ticket.getToken());
+		ticketInfo.setToken(
+				ticket.getToken() == null ? PasswordUtils.generateRandomString(128, true) : ticket.getToken());
 		ticketInfo.setType(ticket.getTicketType().name());// otp- link
-		if(ticket.getTicketType() == TicketType.OTP) {
+		if (ticket.getTicketType() == TicketType.OTP) {
 			ticketInfo.setStatus(TicketStatus.OPEN.name());
 			ticketInfo.setIncorrectOTPCount(0);
 			ticketInfo.setOneTimePassword(PasswordUtils.generateRandomNumber(ticket.getOtpDigits()));
-		}else if(ticket.getTicketType() == TicketType.LINK)  {
+		} else if (ticket.getTicketType() == TicketType.LINK) {
 			ticketInfo.setStatus(TicketStatus.UNUSED.name());
 			ticketInfo.setBaseTicketUrl(ticket.getBaseTicketUrl());
-		}else if(ticket.getTicketType() == TicketType.DECISION_LINK)  {
+		} else if (ticket.getTicketType() == TicketType.DECISION_LINK) {
 			ticketInfo.setStatus(TicketStatus.UNUSED.name());
 			ticketInfo.setBaseTicketUrl(ticket.getBaseTicketUrl());
 			ticketInfo.setAcceptCode(PasswordUtils.generateRandomNumber(12));
 			ticketInfo.setDeclineCode(PasswordUtils.generateRandomNumber(12));
 		}
-		ticketInfo=ticketRepo.save(ticketInfo);
+		ticketInfo = ticketRepo.save(ticketInfo);
 		return InfraDTOHelper.convertToTicketDTO(ticketInfo);
 	}
 
 	@Override
 	public TicketDTO updateTicket(String id, TicketDTO updatedTicket) {
-		TicketInfoEntity tokenEntity = ticketRepo.findById(id)
-				.orElseThrow(() -> new NotFoundException("ticket", id));
-		if(updatedTicket.getTicketStatus() != null) {
+		TicketInfoEntity tokenEntity = ticketRepo.findById(id).orElseThrow(() -> new NotFoundException("ticket", id));
+		if (updatedTicket.getTicketStatus() != null) {
 			tokenEntity.setStatus(updatedTicket.getTicketStatus().name());
 		}
-		if(updatedTicket.getIncorrectOTPCount() != null) {
+		if (updatedTicket.getIncorrectOTPCount() != null) {
 			tokenEntity.setIncorrectOTPCount(updatedTicket.getIncorrectOTPCount());
 		}
-		tokenEntity=ticketRepo.save(tokenEntity);
+		tokenEntity = ticketRepo.save(tokenEntity);
 		return InfraDTOHelper.convertToTicketDTO(tokenEntity);
 	}
 
@@ -260,8 +295,10 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 	}
 
 	private String buildRemoteFileName(String originalFileName, DocumentIndexType docType) {
-		return docType.getDocFolderName() + "/"
-				+ UUID.randomUUID().toString().concat(originalFileName.substring(originalFileName.lastIndexOf(".")));
+		String extension = FilenameUtils.getExtension(originalFileName);
+		return docType.getDocFolderName() + "/" + UUID.randomUUID().toString() + "."
+				+ (extension == null ? "zip" : extension);
+
 	}
 
 	@Override
@@ -292,6 +329,14 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 	}
 
 	@Override
+	public DocumentDTO createDocumentIndex(DocumentDTO document) {
+		DocumentRefEntity index = addDocumentReference(document.getOriginalFileName(), document.getRemoteFileName(),
+				document.getDocumentRefId(), document.getDocumentType().name(), document.getDocumentURL(),
+				document.getFileType());
+		return InfraDTOHelper.convertToDocumentDTO(index);
+	}
+
+	@Override
 	public void sendEmail(String senderName, List<CorrespondentDTO> recipients, EmailTemplateDTO template) {
 		sendEmail(senderName, recipients, template, List.of());
 	}
@@ -313,7 +358,7 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 		for (DocumentDTO attachment : attachFrom) {
 			try {
 				Map<String, String> attachmentMap = new HashMap<>();
-				byte[] fileContent = CommonUtils.toByteArray(new URL(attachment.getDocumentURL()));
+				byte[] fileContent = CommonUtils.toByteArray(URI.create(attachment.getDocumentURL()).toURL());
 				attachmentMap.put("content", x.encodeAsString(fileContent));
 				attachmentMap.put("contentId", attachment.getDocId());
 				attachmentMap.put("disposition", "attachment");
@@ -341,15 +386,15 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 			recipientMap.put("recipientName", recipient.getName());
 			recipientsList.add(recipientMap);
 		}
-		
+
 		List<Map<String, String>> attachmentList = new ArrayList<>();
 
-		if(attachFrom != null) {
+		if (attachFrom != null) {
 			Base64 x = new Base64();
 			for (DocumentDTO attachment : attachFrom) {
 				try {
 					Map<String, String> attachmentMap = new HashMap<>();
-					byte[] fileContent = CommonUtils.toByteArray(new URL(attachment.getDocumentURL()));
+					byte[] fileContent = CommonUtils.toByteArray(URI.create(attachment.getDocumentURL()).toURL());
 					attachmentMap.put("content", x.encodeAsString(fileContent));
 					attachmentMap.put("contentId", attachment.getDocId());
 					attachmentMap.put("disposition", "attachment");
@@ -361,12 +406,13 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 				}
 			}
 		}
-		
+
 		senderName = (senderName == null) ? propertyHelper.getAppName() : senderName;
 		emailExtService.sendEmail(template.getSubject(), senderName, recipientsList, templateId, template.getBody(),
 				attachmentList);
 	}
 
+	@NoLogging
 	@Override
 	public Map<String, List<KeyValuePair>> getDomainRefConfigs() throws Exception {
 		RemoteConfig config = remoteConfigService.getRemoteConfig(DOMAIN_GLOBAL_CONFIG);
@@ -378,37 +424,54 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 		return configMap;
 	}
 
-	 
+	@Override
+	public Map<String, List<KeyValuePair>> getDomainLocationData() throws Exception {
+		RemoteConfig config = remoteConfigService.getRemoteConfig(DOMAIN_LOCATION_DATA);
+		ConfigTemplate[] configList = CommonUtils.jsonToPojo(config.getValue().toString(), ConfigTemplate[].class);
+		Map<String, List<KeyValuePair>> configMap = new HashMap<>();
+		for (ConfigTemplate domConfig : configList) {
+			configMap.put(domConfig.getConfigName(), domConfig.getConfigValues());
+		}
+		return configMap;
+	}
+
 	public FieldDTO addOrUpdateCustomField(FieldDTO fieldDTO) {
 		CustomFieldEntity entity = fieldDTO.getFieldId() == null ? new CustomFieldEntity()
 				: fieldRepository.findById(fieldDTO.getFieldId()).orElseThrow();
-		entity.setFieldDescription(fieldDTO.getFieldDescription() != null ?fieldDTO.getFieldDescription(): entity.getFieldDescription());
-		entity.setFieldKey(fieldDTO.getFieldKey() != null ?fieldDTO.getFieldKey().name(): entity.getFieldKey());
-		entity.setFieldName(fieldDTO.getFieldName() != null ?fieldDTO.getFieldName(): entity.getFieldName());
-		entity.setFieldType(fieldDTO.getFieldType() != null ?fieldDTO.getFieldType(): entity.getFieldType());
-		entity.setFieldValue(fieldDTO.getFieldValue() != null ?fieldDTO.getFieldValue(): entity.getFieldValue());
-		if(fieldDTO.getFieldId()== null) {
+		entity.setFieldDescription(
+				fieldDTO.getFieldDescription() != null ? fieldDTO.getFieldDescription() : entity.getFieldDescription());
+		entity.setFieldKey(fieldDTO.getFieldKey() != null ? fieldDTO.getFieldKey().name() : entity.getFieldKey());
+		entity.setFieldName(fieldDTO.getFieldName() != null ? fieldDTO.getFieldName() : entity.getFieldName());
+		entity.setFieldType(fieldDTO.getFieldType() != null ? fieldDTO.getFieldType() : entity.getFieldType());
+		entity.setFieldValue(fieldDTO.getFieldValue() != null ? fieldDTO.getFieldValue() : entity.getFieldValue());
+		if (fieldDTO.getFieldId() == null) {
 			entity.setSource(fieldDTO.getFieldSource());
 		}
-		return InfraDTOHelper.convertToFieldDTO(entity,propertyHelper.getAppSecret());
+		return InfraDTOHelper.convertToFieldDTO(entity, propertyHelper.getAppSecret());
 	}
 
 	@Override
 	public Page<NotificationDTO> getNotifications(Integer index, Integer size, NotificationDTOFilter filterDTO) {
 		List<ObjectFilter> filter = new ArrayList<>();
-		List<NotificationDTO> notifications = new ArrayList<>();
+		List<NotificationDTO> notifications = null;
 
-		if(filterDTO.getRead() != null) {
-			filter.add(new ObjectFilter("read",Operator.EQUAL,filterDTO.getRead()));
+		if (filterDTO.getRead() != null) {
+			filter.add(new ObjectFilter("read", Operator.EQUAL, filterDTO.getRead()));
 		}
-		if(filterDTO.getTargetUserId() != null) {
-			filter.add(new ObjectFilter("userId",Operator.EQUAL,filterDTO.getTargetUserId()));
+		if (filterDTO.getTargetUserId() != null) {
+			filter.add(new ObjectFilter("targetUserIds", Operator.ARRAY_CONTAIN, filterDTO.getTargetUserId()));
 		}
 		try {
-			List<Map<String, Object>> notificationCollection = collectionExtService.getCollectionData(COLLECTION_NOTIFICATION, index, size, filter);
-			for(Map<String, Object> notification:notificationCollection) {
-				notifications.add(new NotificationDTO(notification));
-			}
+			notifications = collectionExtService
+					.getCollectionData(COLLECTION_NOTIFICATION, index, size, filter,NotificationDTO.class);
+//			for (Map<String, Object> notification : notificationCollection) {
+//				notifications.add(new NotificationDTO(notification));
+//			}
+			notifications.sort((n1, n2) -> {
+				return Long.valueOf(n2.getNotificationDate().getTime())
+						.compareTo(Long.valueOf(n1.getNotificationDate().getTime()));
+			});
+			// Collections.sort(notifications, Collections.reverseOrder());
 		} catch (ThirdPartyException e) {
 			e.printStackTrace();
 		}
@@ -417,22 +480,36 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 
 	@Override
 	public NotificationDTO createAndSendNotification(NotificationDTO notificationDTO) throws Exception {
-		if(notificationDTO.getTarget() != null && !notificationDTO.getTarget().isEmpty()) {
-			List<String> userIds=notificationDTO.getTarget().stream().map(m-> m.getUserId()).collect(Collectors.toList());
-			System.err.println(userIds);
-			for(String userId:userIds) {
-				ObjectFilter filter= new ObjectFilter("userId",Operator.EQUAL,userId);
-				List<String> tokens = collectionExtService.getCollectionData(COLLECTION_NOTIFICATION_TOKEN, null, null, List.of(filter))
-						.stream().filter(f->f.get("token") != null).map(m->m.get("token").toString()).collect(Collectors.toList());
-				System.err.println(tokens);
-				if(!tokens.isEmpty()) {
-					List<String> messageIds=messageExtService.sendMessage(notificationDTO.getTitle(), notificationDTO.getSummary(), notificationDTO.getImage(), tokens, notificationDTO.toMap());
-					notificationDTO.toSourceMap().put("message_ids", messageIds);
+		//Map<String, Object> sourceMap = notificationDTO.toSourceMap();
+		if (notificationDTO.getTarget() != null && !notificationDTO.getTarget().isEmpty()) {
+			List<String> userIds = notificationDTO.getTarget().stream().map(m -> m.getUserId())
+					.collect(Collectors.toList());
+			for (String userId : userIds) {
+				List<String> message_ids = sendNotificationMessage(userId, notificationDTO.getTitle(),
+						notificationDTO.getSummary(), notificationDTO.getImage(), notificationDTO.toMap());
+				if (!message_ids.isEmpty()) {
+					notificationDTO.toSourceMap().put("message_ids", message_ids);
 				}
 			}
+			notificationDTO.setTargetUserIds(userIds);
+			notificationDTO.setId(UUID.randomUUID().toString());
 		}
-		Map<String, Object> data=collectionExtService.storeCollectionData(COLLECTION_NOTIFICATION, notificationDTO.toSourceMap());
-		return new NotificationDTO(data);
+		NotificationDTO data = collectionExtService.storeCollectionData(COLLECTION_NOTIFICATION, notificationDTO.getId(),notificationDTO);
+		return data;
+	}
+
+	@Override
+	public List<String> sendNotificationMessage(String userId, String title, String summary, String image,
+			Map<String, String> data) throws Exception {
+		ObjectFilter filter = new ObjectFilter("userId", Operator.EQUAL, userId);
+		List<String> tokens = collectionExtService
+				.getCollectionData(COLLECTION_NOTIFICATION_TOKEN, null, null, List.of(filter), NTokenDTO.class).stream()
+				.filter(f -> f.getToken() != null).map(m -> m.getToken()).collect(Collectors.toList());
+		List<String> messageIds = new ArrayList<>();
+		if (!tokens.isEmpty()) {
+			messageIds = messageExtService.sendMessage(title, summary, image, tokens, data);
+		}
+		return messageIds;
 	}
 
 	@Override
@@ -443,30 +520,176 @@ public class CommonInfraServiceImpl implements ISequenceInfraService, ITicketInf
 
 	@Override
 	public boolean saveNotificationToken(String userId, String token) throws Exception {
-		ObjectFilter filter= new ObjectFilter("token",Operator.EQUAL,token);
-		ObjectFilter filter2= new ObjectFilter("userId",Operator.EQUAL,userId);
-		List<Map<String, Object>> collections=collectionExtService.getCollectionData(COLLECTION_NOTIFICATION_TOKEN, null, null, List.of(filter,filter2));
-		if(collections.isEmpty()) {
-			Map<String,Object> dataMap= new HashMap<>();
-			dataMap.put("userId", userId);
-			dataMap.put("token", token);
-			dataMap.put("registration_date", CommonUtils.getSystemDate());
-			collectionExtService.storeCollectionData(COLLECTION_NOTIFICATION_TOKEN, dataMap);
+		ObjectFilter filter = new ObjectFilter("token", Operator.EQUAL, token);
+		ObjectFilter filter2 = new ObjectFilter("userId", Operator.EQUAL, userId);
+		List<NTokenDTO> collections = collectionExtService.getCollectionData(COLLECTION_NOTIFICATION_TOKEN,
+				null, null, List.of(filter, filter2), NTokenDTO.class);
+		if (collections.isEmpty()) {
+			NTokenDTO dataMap = new NTokenDTO();
+			dataMap.setId(UUID.randomUUID().toString());
+			dataMap.setUserId(userId);
+			dataMap.setToken(token);
+			dataMap.setCreatedOn(CommonUtils.getSystemDate());
+			collectionExtService.storeCollectionData(COLLECTION_NOTIFICATION_TOKEN, dataMap.getId(), dataMap);
 		}
 		return true;
 	}
 
 	@Override
-	public boolean deleteNotificationTargetToken(String userId,String token) throws Exception {
-		ObjectFilter filter= new ObjectFilter("token",Operator.EQUAL,token);
-		ObjectFilter filter2= new ObjectFilter("userId",Operator.EQUAL,userId);
-		List<Map<String, Object>> collections=collectionExtService.getCollectionData(COLLECTION_NOTIFICATION_TOKEN, null, null, List.of(filter,filter2));
-		for(Map<String, Object> collection:collections) {
-			collectionExtService.removeCollectionData(COLLECTION_NOTIFICATION_TOKEN, String.valueOf(collection.get("id")));
+	public boolean deleteNotificationTargetToken(String userId, String token) throws Exception {
+		ObjectFilter filter = new ObjectFilter("token", Operator.EQUAL, token);
+		ObjectFilter filter2 = new ObjectFilter("userId", Operator.EQUAL, userId);
+		List<NTokenDTO> collections = collectionExtService.getCollectionData(COLLECTION_NOTIFICATION_TOKEN,
+				null, null, List.of(filter, filter2),NTokenDTO.class);
+		for (NTokenDTO collection : collections) {
+			collectionExtService.removeCollectionData(COLLECTION_NOTIFICATION_TOKEN,
+					collection.getId());
 		}
 		return true;
 	}
 
-	
+	@Override
+	public List<LogsDTO> getLogs(String corelationId) {
+		List<LogsEntity> logs = logsRepo.findByCorelationId(corelationId);
+		return logs.stream().map(InfraDTOHelper::convertToLogsDTO).toList();
+	}
+
+	@Override
+	public LogsDTO saveLog(LogsDTO logsDTO) {
+		LogsEntity logsEntity = new LogsEntity();
+		logsEntity.setCorelationId(logsDTO.getCorelationId());
+		logsEntity.setEndTime(logsDTO.getEndTime());
+		logsEntity.setError(logsDTO.getError());
+		logsEntity.setId(UUID.randomUUID().toString());
+		logsEntity.setInputs(logsDTO.getInputs());
+		logsEntity.setMethodName(logsDTO.getMethodName());
+		logsEntity.setOutputs(logsDTO.getOutputs());
+		logsEntity.setStartTime(logsDTO.getStartTime());
+		logsEntity.setType(logsDTO.getType());
+		logsEntity = logsRepo.save(logsEntity);
+		return InfraDTOHelper.convertToLogsDTO(logsEntity);
+	}
+
+	@Override
+	public ApiKeyDTO createApiKey(ApiKeyDTO apiKeyDTO) {
+		ApiKeyEntity apiKeyEntity = new ApiKeyEntity();
+		apiKeyEntity.setApiKey("N." + UUID.randomUUID().toString() + "." + UUID.randomUUID().toString());
+		apiKeyEntity.setCreatedOn(CommonUtils.getSystemDate());
+		apiKeyEntity.setExpireable(apiKeyDTO.isExpireable());
+		apiKeyEntity.setExpireOn(apiKeyDTO.getExpiryDate());
+		apiKeyEntity.setId(UUID.randomUUID().toString());
+		apiKeyEntity.setScopes(InfraFieldHelper.stringListToString(apiKeyDTO.getScopes()));
+		apiKeyEntity.setStatus(apiKeyDTO.getStatus() == null ? null : apiKeyDTO.getStatus().name());
+		apiKeyEntity = apiKeyRepo.save(apiKeyEntity);
+		return InfraDTOHelper.convertToApiKeyDTO(apiKeyEntity);
+	}
+
+	@Override
+	public ApiKeyDTO getApiKeyDetail(String apiKey) {
+		ApiKeyEntity apiKeyEntity = apiKeyRepo.findByApiKey(apiKey).orElseThrow();
+		return InfraDTOHelper.convertToApiKeyDTO(apiKeyEntity);
+	}
+
+	@Override
+	public List<ApiKeyDTO> getApiKeys(ApiKeyStatus status) {
+		List<ApiKeyEntity> apikeys = apiKeyRepo.findByStatus(status.name());
+		return apikeys.stream().map(InfraDTOHelper::convertToApiKeyDTO).collect(Collectors.toList());
+	}
+
+	@Override
+	public Map<String, String> getDashboardCounts(String userId) {
+		return dbCountRepository.findByUserIdIn(List.of(userId, "NA")).stream()
+				.collect(Collectors.toMap(m1 -> m1.getDbFieldKey(), m2 -> m2.getDbFieldValue()));
+	}
+
+	@Override
+	public Map<String, String> addOrUpdateDashboardCounts(String userId, Map<String, String> map) {
+		List<DashboardCountEntity> countsEntities = new ArrayList<>();
+		for (Entry<String, String> entity : map.entrySet()) {
+			DashboardCountEntity dbCEntity = new DashboardCountEntity();
+			dbCEntity.setId(userId + "_" + entity.getKey());
+			dbCEntity.setDbFieldKey(entity.getKey());
+			dbCEntity.setDbFieldValue(entity.getValue());
+			dbCEntity.setLastUpdatedOn(CommonUtils.getSystemDate());
+			dbCEntity.setUserId(userId);
+			countsEntities.add(dbCEntity);
+		}
+		return dbCountRepository.saveAll(countsEntities).stream()
+				.collect(Collectors.toMap(m1 -> m1.getDbFieldKey(), m2 -> m2.getDbFieldValue()));
+	}
+
+	private static List<ChangeDTO> compareMapsAndGetChanges(Map<String, Object> oldMap,
+			Map<String, Object> newMap) {
+		List<ChangeDTO> changes = new ArrayList<>();
+
+		if(newMap != null && oldMap != null) {
+			for (String key : oldMap.keySet()) {
+				Object oldValue = oldMap.get(key);
+				Object newValue = newMap.get(key);
+				if (!CommonUtils.areEqual(oldValue, newValue)) {
+					changes.add(new ChangeDTO(key, oldValue, newValue, "changed"));
+				}
+			}
+		}
+		else if(newMap != null) {
+			for (String key : newMap.keySet()) {
+				if (oldMap == null || !oldMap.containsKey(key)) {
+					if(!ObjectUtils.isEmpty(newMap.get(key))) {
+						changes.add(new ChangeDTO(key, null, newMap.get(key), "added"));
+					}
+				}
+			}
+		} 
+		else if(oldMap != null) {
+			for (String key : oldMap.keySet()) {
+				if (newMap == null || !newMap.containsKey(key)) {
+					changes.add(new ChangeDTO(key, oldMap.get(key),null , "removed"));
+				}
+			}
+		}
+		return changes;
+	}
+
+	@Override
+	public void logCreation(HistoryRefType type, String refId, AuthenticatedUser aUser, Map<String,Object> object)
+			throws ThirdPartyException {
+
+		HistoryDTO historyDTO = new HistoryDTO();
+		historyDTO.setChanges(compareMapsAndGetChanges(null, object));
+		historyDTO.setAction("CREATE");
+		historyDTO.setCreatedBy(aUser.getUserId());
+		historyDTO.setCreatedById(aUser.getId());
+		historyDTO.setCreatedByName(aUser.getName());
+		historyDTO.setCreatedOn(CommonUtils.getSystemDate().getTime());
+		historyDTO.setId(UUID.randomUUID().toString());
+		historyDTO.setReferenceId(refId);
+		historyDTO.setReferenceType(type.name());
+		collectionExtService.storeCollectionData(historyCollectionMap.get(type),historyDTO.getId(), historyDTO);
+	}
+
+	@Override
+	public void logUpdate(HistoryRefType type, String refId, AuthenticatedUser aUser, Map<String,Object> object1, Map<String,Object> object2)
+			throws ThirdPartyException {
+		
+		HistoryDTO historyDTO = new HistoryDTO();
+		historyDTO.setChanges(compareMapsAndGetChanges(object1, object2));
+		historyDTO.setAction("UPDATE");
+		historyDTO.setCreatedBy(aUser.getUserId());
+		historyDTO.setCreatedById(aUser.getId());
+		historyDTO.setCreatedByName(aUser.getName());
+		historyDTO.setCreatedOn(CommonUtils.getSystemDate().getTime());
+		historyDTO.setId(UUID.randomUUID().toString());
+		historyDTO.setReferenceId(refId);
+		historyDTO.setReferenceType(type.name());
+		collectionExtService.storeCollectionData(historyCollectionMap.get(type),historyDTO.getId(), historyDTO);
+	}
+
+	@Override
+	public List<HistoryDTO> getHistory(HistoryRefType type, String refId) throws ThirdPartyException {
+		ObjectFilter filter = new ObjectFilter("referenceId", Operator.EQUAL, refId);
+		List<HistoryDTO> notificationCollection = collectionExtService
+				.getCollectionData(historyCollectionMap.get(type), null, null, List.of(filter),HistoryDTO.class);
+		return notificationCollection;
+	}
 
 }
