@@ -2,11 +2,14 @@ package ngo.nabarun.app.infra.serviceimpl;
 
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -16,20 +19,21 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.Assert;
 
 import com.querydsl.core.BooleanBuilder;
+import com.querydsl.core.types.dsl.BooleanExpression;
 
+import lombok.extern.slf4j.Slf4j;
 import ngo.nabarun.app.common.enums.IdType;
 import ngo.nabarun.app.common.enums.ProfileStatus;
 import ngo.nabarun.app.common.enums.RoleCode;
 import ngo.nabarun.app.common.util.CommonUtils;
+import ngo.nabarun.app.ext.exception.ThirdPartyException;
 import ngo.nabarun.app.ext.objects.AuthConnection;
 import ngo.nabarun.app.ext.objects.AuthUser;
 import ngo.nabarun.app.ext.objects.AuthUserRole;
 import ngo.nabarun.app.ext.service.IAuthManagementExtService;
 import ngo.nabarun.app.infra.core.entity.QUserProfileEntity;
 import ngo.nabarun.app.infra.core.entity.UserProfileEntity;
-import ngo.nabarun.app.infra.core.entity.UserRoleEntity;
 import ngo.nabarun.app.infra.core.repo.UserProfileRepository;
-import ngo.nabarun.app.infra.core.repo.UserRoleRepository;
 import ngo.nabarun.app.infra.dto.AddressDTO;
 import ngo.nabarun.app.infra.dto.PhoneDTO;
 import ngo.nabarun.app.infra.dto.RoleDTO;
@@ -41,6 +45,7 @@ import ngo.nabarun.app.infra.misc.InfraFieldHelper;
 import ngo.nabarun.app.infra.misc.WhereClause;
 import ngo.nabarun.app.infra.service.IUserInfraService;
 
+@Slf4j
 @Service
 public class UserInfraServiceImpl implements IUserInfraService {
 
@@ -50,10 +55,23 @@ public class UserInfraServiceImpl implements IUserInfraService {
 	@Autowired
 	private UserProfileRepository profileRepository;
 
-	@Autowired
-	private UserRoleRepository roleRepository;
+//	@Autowired
+//	private UserRoleRepository roleRepository;
 
 	private static Map<String, String> roleVsIdMap = new HashMap<>();
+
+	private String getRoleId(String code) {
+		if (roleVsIdMap.isEmpty()) {
+			try {
+				for (AuthUserRole role : authManagementService.getAllAvailableRoles()) {
+					roleVsIdMap.put(role.getRoleName(), role.getRoleId());
+				}
+			} catch (ThirdPartyException e) {
+				e.printStackTrace();
+			}
+		}
+		return roleVsIdMap.get(code);
+	}
 
 	@Override
 	public Page<UserDTO> getUsers(Integer page, Integer size, UserDTOFilter filter) {
@@ -61,9 +79,9 @@ public class UserInfraServiceImpl implements IUserInfraService {
 		if (filter != null) {
 			QUserProfileEntity qUser = QUserProfileEntity.userProfileEntity;
 			BooleanBuilder query = WhereClause.builder()
-					.optionalAnd(filter.getEmail() != null, () -> qUser.email.eq(filter.getEmail()))
-					.optionalAnd(filter.getFirstName() != null, () -> qUser.firstName.eq(filter.getFirstName()))
-					.optionalAnd(filter.getLastName() != null, () -> qUser.lastName.eq(filter.getLastName()))
+					.optionalAnd(filter.getEmail() != null, () -> qUser.email.equalsIgnoreCase(filter.getEmail()))
+					.optionalAnd(filter.getFirstName() != null, () -> qUser.firstName.containsIgnoreCase(filter.getFirstName()))
+					.optionalAnd(filter.getLastName() != null, () -> qUser.lastName.containsIgnoreCase(filter.getLastName()))
 					.optionalAnd(filter.getPhoneNumber() != null,
 							() -> qUser.phoneNumber.contains(filter.getPhoneNumber())
 									.or(qUser.altPhoneNumber.contains(filter.getPhoneNumber())))
@@ -74,6 +92,17 @@ public class UserInfraServiceImpl implements IUserInfraService {
 							() -> qUser.publicProfile.eq(filter.getPublicProfile()))
 					.optionalAnd(filter.getDeleted() != null, () -> qUser.deleted.eq(filter.getDeleted()))
 					.optionalAnd(filter.getUserId() != null, () -> qUser.userId.eq(filter.getUserId())).build();
+
+			/**
+			 * 
+			 */
+			if (filter.getRoles() != null && !filter.getRoles().isEmpty()) {
+				BooleanExpression exp = qUser.roleCodes.contains(filter.getRoles().get(0).name());
+				for (int i = 1; i < filter.getRoles().size(); i++) {
+					exp = exp.or(qUser.roleCodes.contains(filter.getRoles().get(i).name()));
+				}
+				query = query.and(exp);
+			}
 
 			if (page == null || size == null) {
 				List<UserProfileEntity> result = new ArrayList<>();
@@ -119,10 +148,6 @@ public class UserInfraServiceImpl implements IUserInfraService {
 	 */
 	@Override
 	public UserDTO createUser(UserDTO userDTO) throws Exception {
-		return createUser(userDTO, null);
-	}
-
-	private UserDTO createUser(UserDTO userDTO, AuthUser authUser) throws Exception {
 		Assert.notNull(userDTO.getAdditionalDetails(), "additionalDetails object must not be null.");
 
 		/**
@@ -130,21 +155,22 @@ public class UserInfraServiceImpl implements IUserInfraService {
 		 * with email this will be hard blocker as for re joiners auth0 profile must be
 		 * deleted during their termination
 		 */
-		AuthUser newAuth0User = null;
-		if (authUser == null) {
-			newAuth0User = new AuthUser();
-			newAuth0User.setFirstName(userDTO.getFirstName());
-			newAuth0User.setLastName(userDTO.getLastName());
-			newAuth0User.setEmail(userDTO.getEmail());
-			newAuth0User.setFullName(userDTO.getFirstName() + " " + userDTO.getLastName());
+		AuthUser newAuth0User = new AuthUser();
+		newAuth0User.setFirstName(userDTO.getFirstName());
+		newAuth0User.setLastName(userDTO.getLastName());
+		newAuth0User.setEmail(userDTO.getEmail());
+		newAuth0User.setFullName(userDTO.getFirstName() + " " + userDTO.getLastName());
 
-			newAuth0User.setPassword(userDTO.getPassword());
-			newAuth0User.setEmailVerified(
-					userDTO.getAdditionalDetails() != null ? userDTO.getAdditionalDetails().getEmailVerified() : null);
-			newAuth0User.setProviders(userDTO.getLoginProviders());
+		newAuth0User.setPassword(userDTO.getPassword());
+		newAuth0User.setEmailVerified(
+				userDTO.getAdditionalDetails() != null ? userDTO.getAdditionalDetails().getEmailVerified() : null);
+		newAuth0User.setResetPassword(
+				userDTO.getAdditionalDetails() != null ? userDTO.getAdditionalDetails().getPasswordResetRequired() : null);
+		newAuth0User.setProviders(userDTO.getLoginProviders());
+		newAuth0User.setUserId(userDTO.getUserId());
+
+		if (userDTO.getUserId() == null) {
 			newAuth0User = authManagementService.createUser(newAuth0User);
-		} else {
-			newAuth0User = authUser;
 		}
 
 		/**
@@ -155,14 +181,15 @@ public class UserInfraServiceImpl implements IUserInfraService {
 		 */
 		Optional<UserProfileEntity> userProfile = profileRepository.findByEmail(userDTO.getEmail());
 		UserProfileEntity profile = userProfile.isPresent() ? userProfile.get() : new UserProfileEntity();
-		if (profile.getId() == null) {
+		if (!userProfile.isPresent()) {
 			profile.setId(UUID.randomUUID().toString());
+			userDTO.setStatus(ProfileStatus.ACTIVE);
 		}
 		profile.setTitle(userDTO.getTitle());
 		profile.setFirstName(newAuth0User.getFirstName());
 		profile.setMiddleName(userDTO.getMiddleName());
 		profile.setLastName(newAuth0User.getLastName());
-		profile.setAvatarUrl(newAuth0User.getPicture());
+		profile.setAvatarUrl(newAuth0User.getPicture() != null ? newAuth0User.getPicture() : userDTO.getImageUrl());
 		profile.setDateOfBirth(userDTO.getDateOfBirth());
 		profile.setGender(userDTO.getGender());
 		profile.setEmail(newAuth0User.getEmail());
@@ -170,9 +197,10 @@ public class UserInfraServiceImpl implements IUserInfraService {
 		profile.setCreatedBy(null);
 		profile.setActiveContributor(
 				userDTO.getAdditionalDetails() == null ? null : userDTO.getAdditionalDetails().isActiveContributor());
-		profile.setCreatedOn(newAuth0User.getCreatedAt());
+		profile.setCreatedOn(newAuth0User.getCreatedAt() != null ? newAuth0User.getCreatedAt() : CommonUtils.getSystemDate());
 		profile.setDeleted(false);
-		profile.setPublicProfile(userDTO.getAdditionalDetails().isDisplayPublic());
+		profile.setPublicProfile(
+				userDTO.getAdditionalDetails() == null ? null : userDTO.getAdditionalDetails().isDisplayPublic());
 		profile.setStatus(userDTO.getStatus() == null ? null : userDTO.getStatus().name());
 		profile.setUserId(newAuth0User.getUserId());
 
@@ -180,7 +208,7 @@ public class UserInfraServiceImpl implements IUserInfraService {
 
 		profile = profileRepository.save(profile);
 		/*
-		 * Updating user metatdata
+		 * Updating user meta data
 		 */
 		AuthUser authuser = new AuthUser();
 		authuser.setInactive(false);
@@ -203,12 +231,20 @@ public class UserInfraServiceImpl implements IUserInfraService {
 					profile.setCountry(addressDTO.getCountry());
 					break;
 				case PERMANENT:
+					profile.setPermanentAddressLine1(addressDTO.getAddressLine1());
+					profile.setPermanentAddressLine2(addressDTO.getAddressLine2());
+					profile.setPermanentAddressLine3(addressDTO.getAddressLine3());
+					profile.setPermanentHometown(addressDTO.getHometown());
+					profile.setPermanentDistrict(addressDTO.getDistrict());
+					profile.setPermanentState(addressDTO.getState());
+					profile.setPermanentCountry(addressDTO.getCountry());
 
 					break;
 				default:
-					break;
 				}
 			}
+			profile.setPresentPermanentSame(userDTO.getPresentPermanentSame());
+
 		}
 
 		if (userDTO.getPhones() != null) {
@@ -262,7 +298,14 @@ public class UserInfraServiceImpl implements IUserInfraService {
 
 		UserProfileEntity updatedProfile = new UserProfileEntity();
 		updatedProfile.setTitle(userDTO.getTitle());
-		if (userDTO.getFirstName() != null) {
+		if (userDTO.getFirstName() != null && userDTO.getLastName() != null) {
+			updatedProfile.setFirstName(userDTO.getFirstName());
+			updateAuthUser.setFirstName(userDTO.getFirstName());
+			updatedProfile.setLastName(userDTO.getLastName());
+			updateAuthUser.setLastName(userDTO.getLastName());
+			updateAuthUser.setFullName(userDTO.getName() == null ? userDTO.getFirstName() + " " + profile.getLastName()
+					: userDTO.getName());
+		} else if (userDTO.getFirstName() != null) {
 			updatedProfile.setFirstName(userDTO.getFirstName());
 			updateAuthUser.setFirstName(userDTO.getFirstName());
 			updateAuthUser.setFullName(userDTO.getName() == null ? userDTO.getFirstName() + " " + profile.getLastName()
@@ -272,21 +315,18 @@ public class UserInfraServiceImpl implements IUserInfraService {
 			updateAuthUser.setLastName(userDTO.getLastName());
 			updateAuthUser.setFullName(userDTO.getName() == null ? userDTO.getFirstName() + " " + profile.getLastName()
 					: userDTO.getName());
-		} else if (userDTO.getFirstName() != null && userDTO.getLastName() != null) {
-			updatedProfile.setFirstName(userDTO.getFirstName());
-			updateAuthUser.setFirstName(userDTO.getFirstName());
-			updatedProfile.setLastName(userDTO.getLastName());
-			updateAuthUser.setLastName(userDTO.getLastName());
-			updateAuthUser.setFullName(userDTO.getName() == null ? userDTO.getFirstName() + " " + profile.getLastName()
-					: userDTO.getName());
 		}
-		boolean isEmailVerifiedUpdated=false;
+		
+		/**
+		 * updating email and email verified
+		 */
+		boolean isEmailVerifiedUpdated = false;
 		if (userDTO.getAdditionalDetails() != null && userDTO.getAdditionalDetails().getEmailVerified() != null) {
 			updateAuthUser.setEmailVerified(
 					userDTO.getAdditionalDetails() != null ? userDTO.getAdditionalDetails().getEmailVerified() : null);
-			isEmailVerifiedUpdated=true;
+			isEmailVerifiedUpdated = true;
 		}
-		
+
 		updatedProfile.setMiddleName(userDTO.getMiddleName());
 		updatedProfile.setAbout(userDTO.getAbout());
 		updatedProfile.setDateOfBirth(userDTO.getDateOfBirth());
@@ -303,7 +343,20 @@ public class UserInfraServiceImpl implements IUserInfraService {
 		updatedProfile.setStatus(userDTO.getStatus() == null ? null : userDTO.getStatus().name());
 		updatedProfile.setUserId(userDTO.getUserId() == null ? null : userDTO.getUserId());
 		updatedProfile.setAvatarUrl(userDTO.getImageUrl());
-
+		
+		updatedProfile.setDonationPauseStartDate(
+				userDTO.getAdditionalDetails() != null ? userDTO.getAdditionalDetails().getDonPauseStartDate() : null);
+		updatedProfile.setDonationPauseEndDate(
+				userDTO.getAdditionalDetails() != null ? userDTO.getAdditionalDetails().getDonPauseEndDate() : null);
+		
+		/**
+		 * Roles
+		 */
+		if (userDTO.getRoles() != null && !userDTO.getRoles().isEmpty()) {
+			updatedProfile.setRoleNames(InfraFieldHelper.stringListToString(userDTO.getRoles().stream().map(m -> m.getName()).toList()));
+			updatedProfile.setRoleCodes(
+					InfraFieldHelper.stringListToString(userDTO.getRoles().stream().map(m -> m.getCode().name()).toList()));
+		}
 		fillAddressMobileSocialMedia(profile, userDTO);
 
 		CommonUtils.copyNonNullProperties(updatedProfile, profile);
@@ -313,15 +366,21 @@ public class UserInfraServiceImpl implements IUserInfraService {
 		 * changes, or profile status to update
 		 */
 		if (userDTO.getFirstName() != null || userDTO.getLastName() != null || userDTO.getEmail() != null
-				|| userDTO.getStatus() != null || isEmailVerifiedUpdated) {
+				|| userDTO.getStatus() != null || isEmailVerifiedUpdated || userDTO.getProfileId() != null) {
 			if (userDTO.getStatus() != null) {
-				updateAuthUser.setInactive(!ProfileStatus.ACTIVE.name().equalsIgnoreCase(profile.getStatus()));
+				updateAuthUser.setInactive(ProfileStatus.ACTIVE != userDTO.getStatus());
+				updateAuthUser.setBlocked(userDTO.getStatus() == ProfileStatus.BLOCKED);
 			}
+			updateAuthUser.setProfileId(profile.getId());
 			updateAuthUser = authManagementService.updateUser(profile.getUserId(), updateAuthUser);
 		}
+		//boolean isPasswordUpdated = false;
+		
 		profile = profileRepository.save(profile);
 		return InfraDTOHelper.convertToUserDTO(profile, updateAuthUser);
 	}
+	
+	//changePassword(String )
 
 	@Override
 	public void deleteUser(String profileId) throws Exception {
@@ -338,85 +397,95 @@ public class UserInfraServiceImpl implements IUserInfraService {
 		return authManagementService.createPasswordResetTicket(userId, appClientId, expireInSec);
 	}
 
-	@Deprecated
+	
 	@Override
 	public List<RoleDTO> getUserRoles(String identifier, IdType type, boolean isActiveRole) throws Exception {
-		// List<UserRoleEntity> roles = new ArrayList<>();
 		List<AuthUserRole> roles = new ArrayList<>();
 		if (isActiveRole && type == IdType.ID) {
-//			roles = isActiveRole ? roleRepository.findByProfileIdAndActiveTrue(identifier)
-//					: roleRepository.findByProfileId(identifier);
 			UserProfileEntity profile = profileRepository.findById(identifier).orElseThrow();
 			roles.addAll(authManagementService.getRoles(profile.getUserId()));
-		}
-		else if (isActiveRole && type == IdType.EMAIL) {
+		} else if (isActiveRole && type == IdType.EMAIL) {
 			UserProfileEntity profile = profileRepository.findByEmail(identifier).orElseThrow();
 			roles.addAll(authManagementService.getRoles(profile.getUserId()));
 		} else if (isActiveRole && type == IdType.AUTH_USER_ID) {
-//			roles = isActiveRole ? roleRepository.findByUserIdAndActiveTrue(identifier)
-//					: roleRepository.findByUserId(identifier);
 			roles.addAll(authManagementService.getRoles(identifier));
 		}
 		return roles.stream().map(m -> InfraDTOHelper.convertToRoleDTO(m)).toList();
 	}
 
+	
 	@Override
 	public void updateUserRoles(String profileId, List<RoleDTO> roles) throws Exception {
-		if (roleVsIdMap.isEmpty()) {
-			for (AuthUserRole role : authManagementService.getAllAvailableRoles()) {
-				roleVsIdMap.put(role.getRoleName(), role.getRoleId());
-			}
-		}
 
 		UserProfileEntity profile = profileRepository.findById(profileId).orElseThrow();
-		List<UserRoleEntity> currentRoles = roleRepository.findByProfileIdAndActiveTrue(profileId);
+		List<String> currentRoles = InfraFieldHelper.stringToStringList(profile.getRoleCodes());
 		List<String> newRoles = roles.stream().map(m -> m.getCode().name()).toList();
-
-		List<String> rolesToRemove = currentRoles.stream().filter(f -> !newRoles.contains(f.getRoleCode()))
-				.map(m -> roleVsIdMap.get(m.getRoleCode())).toList();
+		Set<String> rolesToRemove=new HashSet<>(currentRoles);
+		rolesToRemove.removeAll(new HashSet<>(newRoles));
+		
+		Set<String> rolesToAdd=new HashSet<>(newRoles);
+		rolesToAdd.removeAll(new HashSet<>(currentRoles));
+		
+		log.debug("rolesToRemove = "+rolesToRemove+" rolesToAdd = "+rolesToAdd);
+		
 		if (!rolesToRemove.isEmpty()) {
-			authManagementService.removeRolesFromUser(profile.getUserId(), rolesToRemove);
+			authManagementService.removeRolesFromUser(profile.getUserId(), rolesToRemove.stream().map(this::getRoleId).collect(Collectors.toList()));
 		}
-		List<String> rolesToAdd = currentRoles.stream().filter(f -> newRoles.contains(f.getRoleCode()))
-				.map(m -> roleVsIdMap.get(m.getRoleCode())).toList();
+		
 		if (!rolesToAdd.isEmpty()) {
-			authManagementService.assignRolesToUser(profile.getUserId(), rolesToAdd);
-		}
-
-		if (!currentRoles.isEmpty()) {
-			roleRepository.saveAll(currentRoles.stream().map(m -> {
-				m.setActive(false);
-				m.setEndDate(CommonUtils.getSystemDate());
-				return m;
-			}).toList());
+			authManagementService.assignRolesToUser(profile.getUserId(), rolesToAdd.stream().map(this::getRoleId).collect(Collectors.toList()));
 		}
 
 		if (!roles.isEmpty()) {
-			roleRepository.saveAll(roles.stream().map(m -> {
-				UserRoleEntity role = new UserRoleEntity();
-				role.setId(UUID.randomUUID().toString());
-				role.setActive(true);
-				role.setExtRoleId(roleVsIdMap.get(m.getCode().name()));
-				role.setProfileId(profile.getId());
-				role.setRoleCode(m.getCode().name());
-				role.setRoleDescription(m.getDescription());
-				// role.setRoleGroup(InfraFieldHelper.stringListToString(m.getGroups().stream().map(k->k.name()).toList()));
-				role.setRoleGroup(InfraFieldHelper.stringListToString(m.getGroups()));
-				role.setRoleName(m.getName());
-				role.setStartDate(CommonUtils.getSystemDate());
-				role.setUserId(profile.getUserId());
-				return role;
-			}).toList());
+			profile.setRoleNames(InfraFieldHelper.stringListToString(roles.stream().map(m -> m.getName()).toList()));
+			profile.setRoleCodes(
+					InfraFieldHelper.stringListToString(roles.stream().map(m -> m.getCode().name()).toList()));
 
-			profile.setRoleNames(String.join(", ", roles.stream().map(m -> m.getName()).toList()));
 		}
 
 		profileRepository.save(profile);
 	}
 
+	//@CacheEvict(cacheNames = "auth0",allEntries = true)
 	@Override
-	public void assignUsersToRole(String roleId, List<UserDTO> users) throws Exception {
+	public void assignUsersToRole(RoleDTO role, List<String> userIds) throws Exception {
+		List<String> currentUsers =getUsersByRole(List.of(role.getCode())).stream().map(m->m.getUserId()).collect(Collectors.toList());
+		List<String> newUsers = userIds;
+		Set<String> usersToRemove=new HashSet<>(currentUsers);
+		usersToRemove.removeAll(new HashSet<>(newUsers));
+		
+		Set<String> usersToAdd=new HashSet<>(newUsers);
+		usersToAdd.removeAll(new HashSet<>(currentUsers));
+		log.debug("currentUsers",currentUsers,"usersToRemove",usersToRemove+" usersToAdd = "+usersToAdd);
 
+		
+		for(String userId:usersToRemove) {
+			Optional<UserProfileEntity> profileOpt = profileRepository.findByUserId(userId);
+			if(profileOpt.isPresent()) {
+				UserProfileEntity profile = profileOpt.get();
+				authManagementService.removeRolesFromUser(userId, List.of(getRoleId(role.getCode().name())));
+				Thread.sleep(100);
+				if(profile.getRoleNames() != null && profile.getRoleCodes() != null) {
+					profile.setRoleNames(InfraFieldHelper.removeItemFromString(profile.getRoleNames() ,role.getName()));
+					profile.setRoleCodes(InfraFieldHelper.removeItemFromString(profile.getRoleCodes() ,role.getCode().name()));
+					profileRepository.save(profile);
+				}
+			}
+		}
+		
+		if(!usersToAdd.isEmpty()) {
+			authManagementService.assignUsersToRole(getRoleId(role.getCode().name()), usersToAdd.stream().collect(Collectors.toList()));
+			for(String userId:usersToAdd) {
+				Optional<UserProfileEntity> profileOpt = profileRepository.findByUserId(userId);
+				if(profileOpt.isPresent()) {
+					UserProfileEntity profile = profileOpt.get();
+					profile.setRoleNames(InfraFieldHelper.addItemToString(profile.getRoleNames() ,role.getName()));
+					profile.setRoleCodes(InfraFieldHelper.addItemToString(profile.getRoleCodes() ,role.getCode().name()));
+					profileRepository.save(profile);
+				}
+			}
+		}
+		
 	}
 
 	@Override
@@ -428,14 +497,9 @@ public class UserInfraServiceImpl implements IUserInfraService {
 
 	@Override
 	public List<UserDTO> getUsersByRole(List<RoleCode> roles) throws Exception {
-		if (roleVsIdMap.isEmpty()) {
-			for (AuthUserRole role : authManagementService.getAllAvailableRoles()) {
-				roleVsIdMap.put(role.getRoleName(), role.getRoleId());
-			}
-		}
 		List<UserDTO> finalUsers = new ArrayList<>();
 		for (RoleCode role : roles) {
-			List<UserDTO> Authusers = authManagementService.listUsersByRole(roleVsIdMap.get(role.name())).stream()
+			List<UserDTO> Authusers = authManagementService.listUsersByRole(getRoleId(role.name())).stream()
 					.map(m -> InfraDTOHelper.convertToUserDTO(null, m)).collect(Collectors.toList());
 			finalUsers.addAll(Authusers);
 		}
@@ -443,17 +507,24 @@ public class UserInfraServiceImpl implements IUserInfraService {
 	}
 
 	@Override
-	public void auth0UserSync() throws Exception {
-		for (AuthUser authUser : authManagementService.getUsers()) {
-			UserDTO userDTO = InfraDTOHelper.convertToUserDTO(null, authUser);
-			Optional<UserProfileEntity> profile = profileRepository.findByEmail(authUser.getEmail());
-			if (profile.isEmpty()) {
-				this.createUser(userDTO, authUser);
-			} else {
-				this.updateUser(profile.get().getId(), userDTO);
+	public List<UserDTO> getAuthUsers() throws Exception {
+		return authManagementService.getUsers().stream()
+				.map(authUser -> InfraDTOHelper.convertToUserDTO(null, authUser)).collect(Collectors.toList());
+	}
+
+	@Override
+	public List<UserDTO> getUsersByRole(List<RoleCode> roles, Boolean isActive) throws Exception {
+		List<UserDTO> finalUsers = new ArrayList<>();
+		for (RoleCode role : roles) {
+			Stream<AuthUser> stream = authManagementService.listUsersByRole(getRoleId(role.name())).stream();
+			if (isActive != null) {
+				stream = stream.filter(f -> !f.isInactive() == isActive);
 			}
-			Thread.sleep(2000);
+			List<UserDTO> authUsers = stream.map(m -> InfraDTOHelper.convertToUserDTO(null, m))
+					.collect(Collectors.toList());
+			finalUsers.addAll(authUsers);
 		}
+		return finalUsers.stream().distinct().collect(Collectors.toList());
 	}
 
 }
